# yellowhammer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 001-getting-started.ipynb  Demo.ipynb  Demo_anthropic.ipynb  Demo_openai.ipynb
prompts/: datalab-api-prompt.md  datalap-api-prompt_block-search.md  system-prompt.md
src/yellowhammer/: __init__.py  datalab-api-prompt.md  llm.py  magics.py  prompt.py  system-prompt.md  test.ipynb
src/yellowhammmer/: __init__.py
tests/: test_import.py
